

2/4/2023 : Karl
 - More detailed comments.

2/3/2023 : Karl
- sqlc code generation
- queries related to register, generated code
- fleshed out store.go
- lots of tests for register and store
- enabled debugging in VSCode
- register pipeline
- usermanager
- controllers were created
- validate functions created and package util created
- altogether ~6 hours of work at least